[project]
name = "plombery"
version = "0.4.1"
description = ""
authors = [
    { name = "Anton Rastyazhenko", email = "rastyazhenko.anton@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13,<4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
apscheduler = "^3.11.0"
apprise = "^1.9.3"
authlib = "^1.5.2"
httpx = "^0.28.1"
itsdangerous = "^2.2.0"
jinja2 = "^3.1.6"
pydantic-settings = "^2.8.1"
python-socketio = "^5.13.0"
python-dotenv = "^1.1.0"
sqlalchemy = "^2.0.40"
uvicorn = "^0.34.0"
fastapi = {version = "^0.115.12", extras = ["all"]}
